[tool.poetry]
name = "multisig_ci"
version = "0.6.8"
description = "Gnosis safe ci scripts."
authors = ["kx9x <kx9x@protonmail.com>"]
license = "AGPLv3"
packages = [
    { include = "multisig_ci" },
]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
safe-eth-py = "4.3.2"
brownie_safe = "0.7.2"
tenacity = ">=8.0.1"
psutil = ">=5.8.0"
requests = ">=2.26.0"
eth-brownie = "1.19.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
