[tool.poetry]
name = "multisig_ci"
version = "0.9.1"
description = "Gnosis safe ci scripts."
authors = ["kx9x <kx9x@protonmail.com>"]
license = "AGPLv3"
packages = [
    { include = "multisig_ci" },
]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
safe-eth-py = "6.0.0b30"
brownie_safe = "0.9.1"
tenacity = ">=8.0.1"
psutil = ">=5.8.0"
requests = ">=2.26.0"
eth-brownie = "1.20.7"
[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
